First created component.

--- a/angular-17-course/src/app/app.component.html
+++ b/angular-17-course/src/app/app.component.html
@@ -8,6 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <h1>Hola  {{ name.toUpperCase() }} {{ date }} {{ number+1 }}</h1>
+<app-test></app-test>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
